--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 </head>
 <body class="page">
 <header class="header">
-    <img src="./images/header-logo.svg" alt="Логотип Карта России" class="heade__logo">
-    <a href="#" class="header__lang-link">RU</a>
-    <a href="#" class="header__lang-link">EN</a>
+    <img src="./images/header-logo.svg" alt="Логотип Карта России" class="header__logo">
+    <nav class="header__lang-links">
+        <a href="#" class="header__lang-link">RU</a>
+        <a href="#" class="header__lang-link">EN</a>
+    </nav>
 </header>
 <section class="lead">
     <h1 class="lead__title">Путешествия по России</h1>
@@ -135,13 +137,13 @@
         до Байкала на электричках.</p>
 </section>
 <footer class="footer">
-    <ul class="footer__links">
-        <li><a href="#" target="_blank" class="footer__link">Карты</a></li>
-        <li><a href="#" target="_blank" class="footer__link">Погода</a></li>
-        <li><a href="#" target="_blank" class="footer__link">Расписание</a></li>
-        <li><a href="#" target="_blank" class="footer__link">Календарь</a></li>
-        <li><a href="#" target="_blank" class="footer__link">Путешествия</a></li>
-    </ul>
+    <nav class="footer__links">
+        <a href="#" target="_blank" class="footer__link">Карты</a>
+        <a href="#" target="_blank" class="footer__link">Погода</a>
+        <a href="#" target="_blank" class="footer__link">Расписание</a>
+        <a href="#" target="_blank" class="footer__link">Календарь</a>
+        <a href="#" target="_blank" class="footer__link">Путешествия</a>
+    </nav>
     <p class="footer__copyright">&copy; 2022 Ксения Мильченко</p>
 </footer>
 </body>
