--- a/index.html
+++ b/index.html
@@ -9,21 +9,23 @@
     <link rel="stylesheet" href="index.css"/>
 </head>
 <body class="page">
-<header class="header">
+<header class="header content__section_padding_s">
     <img src="./images/header-logo.svg" alt="Логотип Карта России" class="header__logo">
-    <ul class="header__lang-links">
-        <li><a href="#" class="header__lang-link">RU</a></li>
-        <li><a href="#" class="header__lang-link">EN</a></li>
-    </ul>
+    <div class="header__lang-links">
+        <a href="#" class="header__lang-link">Ru</a>
+        <a href="#" class="header__lang-link">En</a>
+    </div>
 </header>
 <main class="content">
-    <section class="lead content__section content__section_desktop_narrow content__section_tablet_wide">
+    <section class="lead content__section_padding_l content__section_desktop_narrow content__section_tablet_wide">
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-        <img src="./images/lead-polka.jpg" alt="Верхняя полка с картой России" class="lead__image">
-        <p class="lead__caption">ваша полка — верхняя</p>
+        <figure class="lead__container-image">
+            <img src="./images/lead-polka.jpg" alt="Верхняя полка с картой России" class="lead__image">
+            <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
+        </figure>
     </section>
-    <section class="intro content__section">
+    <section class="intro content__section_padding_l">
         <h2 class="intro__title">Чего мы там не видели?</h2>
         <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
         провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
@@ -40,139 +42,150 @@
             <li>Аэропортов <span class="intro__list-number">241</span></li>
         </ul>
     </section>
-    <section class="photo-grid content__section content__section_desktop_narrow">
+    <section class="photo-grid content__section_padding_s">
         <ul class="photo-grid__item">
-            <li class="photo-grid__image">
-                <img src="./images/photo-grid-train.jpg" alt="Вид из окна поезда">
+            <li>
+                <img src="./images/photo-grid-train.jpg" alt="Вид из окна поезда" class="photo-grid__image">
             </li>
-            <li class="photo-grid__image">
-                <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Горы в облаках">
+            <li>
+                <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Горы в облаках" class="photo-grid__image">
             </li>
-            <li class="photo-grid__image">
-                <img src="./images/photo-grid-tuman.jpg" alt="Собака на стоге сена">
+            <li>
+                <img src="./images/photo-grid-tuman.jpg" alt="Собака на стоге сена" class="photo-grid__image">
             </li>
-            <li class="photo-grid__image">
-                <img src="./images/photo-grid-sochi.jpg" alt="Ёлки в тумане">
+            <li>
+                <img src="./images/photo-grid-sochi.jpg" alt="Ёлки в тумане" class="photo-grid__image">
             </li>
-            <li class="photo-grid__image">
-                <img src="./images/photo-grid-arisa.jpg" alt="Замерзшее озеро">
+            <li>
+                <img src="./images/photo-grid-arisa.jpg" alt="Замерзшее озеро" class="photo-grid__image">
             </li>
-            <li class="photo-grid__image">
-                <img src="./images/photo-grid-baikal.jpg" alt="Пляж Байкала">
+            <li>
+                <img src="./images/photo-grid-baikal.jpg" alt="Пляж Байкала" class="photo-grid__image">
             </li>
-            <li class="photo-grid__image">
-                <img src="./images/photo-grid-elbrus.jpg" alt="Гора Эльбрус">
+            <li>
+                <img src="./images/photo-grid-elbrus.jpg" alt="Гора Эльбрус" class="photo-grid__image">
             </li>
-            <li class="photo-grid__image">
-                <img src="./images/photo-grid-kondratiev.jpg" alt="Знак пешеходный переход">
+            <li>
+                <img src="./images/photo-grid-kondratiev.jpg" alt="Знак пешеходный переход" class="photo-grid__image">
             </li>
-            <li class="photo-grid__image">
-                <img src="./images/photo-grid-kamchatka-1.jpg" alt="Горы Камчатки">
+            <li>
+                <img src="./images/photo-grid-kamchatka-1.jpg" alt="Горы Камчатки" class="photo-grid__image">
             </li>
-            <li class="photo-grid__image">
-                <img src="./images/photo-grid-kamchatka-2.jpg" alt="Горы и поля Камчатки">
+            <li>
+                <img src="./images/photo-grid-kamchatka-2.jpg" alt="Горы и поля Камчатки" class="photo-grid__image">
             </li>
-            <li class="photo-grid__image">
-                <img src="./images/photo-grid-baikal-2.jpg" alt="Горы у Байкала">
+            <li>
+                <img src="./images/photo-grid-baikal-2.jpg" alt="Горы у Байкала" class="photo-grid__image">
             </li>
-            <li class="photo-grid__image">
-                <img src="./images/photo-grid-ergaki.jpg" alt="Горы в тумане">
+            <li>
+                <img src="./images/photo-grid-ergaki.jpg" alt="Горы в тумане" class="photo-grid__image">
             </li>
         </ul>
     </section>
-    <section class="places content__section content__section_phone_wide">
+    <section class="places content__section_padding_l content__section_phone_wide">
         <article class="place">
-            <h2 class="place__title">Куршская коса</h2>
-            <img src="./images/place-kosa.jpg" alt="Куршская коса" class="place__image">
-            <div class="place__website">
-                <p class="place__url-heading">URL</p>
-                <a href="#" target="_blank" class="place__link">park-kosa.ru</a>
+            <div class="place__cover">
+                <h2 class="place__title">Куршская коса</h2>
+                <img src="./images/place-kosa.jpg" alt="Куршская коса" class="place__image">
             </div>
-            <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
+            <div class="place__item">
+                <p class="place__url-heading">URL</p>
+                <a href="http://park-kosa.ru" target="_blank" class="place__link">park-kosa.ru</a>
+                <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
                 горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского
                 моря с другой. Уникальная природная зона на краю российского анклава.</p>
-            <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника
+                <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника
                 и исследователя там же по соседству — самая западная точка России, Балтийская коса,
                 — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает
                 суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
+            </div>
         </article>
         <article class="place">
-            <h2 class="place__title">Кольский</h2>
-            <img src="./images/place-kolsky.jpg" alt="Горы на Кольском" class="place__image">
-            <div class="place__website">
-                <p class="place__url-heading">URL</p>
-                <a href="#" target="_blank" class="place__link">National Geographic</a>
+            <div class="place__cover">
+                <h2 class="place__title">Кольский</h2>
+                <img src="./images/place-kolsky.jpg" alt="Горы на Кольском" class="place__image">
             </div>
-            <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра,
+            <div class="place__item">
+                <p class="place__url-heading">URL</p>
+                <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank" class="place__link">National Geographic</a>
+                <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра,
                 от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-            <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического
+                <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического
                 фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об
                 уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой
                 скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние
                 начинает сбываться с билетом в Мурманск.</p>
+            </div>
         </article>
         <article class="place">
-            <h2 class="place__title">Алтай</h2>
-            <img src="./images/place-altai.jpg" alt="Ноутбук в лесу" class="place__image">
-            <div class="place__website">
-                <p class="place__url-heading">URL</p>
-                <a href="#" target="_blank" class="place__link">Facebook</a>
+            <div class="place__cover">
+                <h2 class="place__title">Алтай</h2>
+                <img src="./images/place-altai.jpg" alt="Ноутбук в лесу" class="place__image">
             </div>
-            <p class="place__paragraph">Алтай — одно из красивейших мест в России.
+            <div class="place__item">
+                <p class="place__url-heading">URL</p>
+                <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank" class="place__link">Facebook</a>
+                 <p class="place__paragraph">Алтай — одно из красивейших мест в России.
                 В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами,
                 горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым
                 чудом здешних мест — горным воздухом.</p>
-            <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом.
+                <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом.
                 Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси,
                 над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели
                 Алтайского края.</p>
+            </div>
         </article>
         <article class="place">
-            <h2 class="place__title">Зимний Байкал</h2>
-            <img src="./images/place-winter-baikal.jpg" alt="Прозрачный лёд Байкала" class="place__image">
-            <div class="place__website">
-                <p class="place__url-heading">URL</p>
-                <a href="#" target="_blank" class="place__link">https://vk.com/baikalmile</a>
+            <div class="place__cover">
+                <h2 class="place__title">Зимний Байкал</h2>
+                <img src="./images/place-winter-baikal.jpg" alt="Прозрачный лёд Байкала" class="place__image">
             </div>
-            <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
+            <div class="place__item">
+                <p class="place__url-heading">URL</p>
+                <a href="https://vk.com/baikalmile" target="_blank" class="place__link">https://vk.com/baikalmile</a>
+                <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
                 в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших
                 мест в России.</p>
-            <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований
+                <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований
                 по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу,
                 и тандем старается развить как можно бóльшую скорость на льду.
                 В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
+            </div>
         </article>
         <article class="place">
-            <h2 class="place__title">Карелия</h2>
-            <img src="./images/place-karelia.jpg" alt="Леса Карелии" class="place__image">
-            <div class="place__website">
-                <p class="place__url-heading">URL</p>
-                <a href="#" target="_blank" class="place__link">http://vodlozero.ru/</a>
+            <div class="place__cover">
+                <h2 class="place__title">Карелия</h2>
+                <img src="./images/place-karelia.jpg" alt="Леса Карелии" class="place__image">
             </div>
-            <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
+            <div class="place__item">
+                <p class="place__url-heading">URL</p>
+                <a href="http://vodlozero.ru" target="_blank" class="place__link">http://vodlozero.ru/</a>
+                <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
                 сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров
                 — леса карельских национальных парков из-за непроходимых болот никогда не знали топора.
                 Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу,
                 видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров
                 не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими
                 когтями. Чтобы все знали, кто тут хозяин.</p>
+            </div>
         </article>
     </section>
-    <section class="cover content__section content__section_laptop_wide">
-        <a href="#" class="cover__item">
-            <h2 class="cover__title">До Байкала «на собаках»</h2>
+    <section class="cover content__section_padding_s content__section_laptop_wide">
+        <div class="cover__item">
+            <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__title">До Байкала «на собаках»</a>
             <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы
         до Байкала на электричках.</p>
-        </a>
+        </div>
+        <div class="cover__overlay"></div>
     </section>
 </main>
-<footer class="footer">
+<footer class="footer content__section_padding_s">
     <nav class="footer__links">
-        <a href="#" target="_blank" class="footer__link">Карты</a>
-        <a href="#" target="_blank" class="footer__link">Погода</a>
-        <a href="#" target="_blank" class="footer__link">Расписание</a>
-        <a href="#" target="_blank" class="footer__link">Календарь</a>
-        <a href="#" target="_blank" class="footer__link">Путешествия</a>
+        <a href="https://yandex.ru/maps" target="_blank" class="footer__link">Карты</a>
+        <a href="https://yandex.ru/pogoda" target="_blank" class="footer__link">Погода</a>
+        <a href="https://rasp.yandex.ru" target="_blank" class="footer__link">Расписание</a>
+        <a href="https://calendar.yandex.ru" target="_blank" class="footer__link">Календарь</a>
+        <a href="https://travel.yandex.ru" target="_blank" class="footer__link">Путешествия</a>
     </nav>
     <p class="footer__copyright">&copy; 2022 Ксения Мильченко</p>
 </footer>
