--- a/index.html
+++ b/index.html
@@ -81,31 +81,31 @@
         </section>
         <section class="places page__section page__section_padding_l page__section_phone_wide">
             <article class="place">
-                <div class="place__cover">
-                    <h2 class="place__title">Куршская коса</h2>
-                    <img src="./images/place-kosa.jpg" alt="Куршская коса" class="place__image" />
-                </div>
-                <div class="place__item">
+                <h2 class="place__title">Куршская коса</h2>
+                <div class="place__website">
                     <p class="place__url-heading">url</p>
                     <a href="http://park-kosa.ru" target="_blank" class="place__link">park-kosa.ru</a>
+                </div>
+                <img src="./images/place-kosa.jpg" alt="Куршская коса" class="place__image" />
+                <div>
                     <p class="place__paragraph">
-                        Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю
-                        российского анклава.
+                            Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю
+                            российского анклава.
                     </p>
                     <p class="place__paragraph">
-                        На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских
-                        городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.
+                            На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских
+                            городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.
                     </p>
                 </div>
             </article>
             <article class="place">
-                <div class="place__cover">
-                    <h2 class="place__title">Кольский</h2>
-                    <img src="./images/place-kolsky.jpg" alt="Горы на Кольском" class="place__image" />
-                </div>
-                <div class="place__item">
+                <h2 class="place__title">Кольский</h2>
+                <div class="place__website">
                     <p class="place__url-heading">url</p>
                     <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank" class="place__link">National&nbsp;Geographic</a>
+                </div>
+                <img src="./images/place-kolsky.jpg" alt="Горы на Кольском" class="place__image" />
+                <div>
                     <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
                     <p class="place__paragraph">
                         Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не
@@ -114,13 +114,13 @@
                 </div>
             </article>
             <article class="place">
-                <div class="place__cover">
-                    <h2 class="place__title">Алтай</h2>
-                    <img src="./images/place-altai.jpg" alt="Ноутбук в лесу" class="place__image" />
-                </div>
-                <div class="place__item">
+                <h2 class="place__title">Алтай</h2>
+                <div class="place__website">
                     <p class="place__url-heading">url</p>
                     <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank" class="place__link">Facebook</a>
+                </div>
+                <img src="./images/place-altai.jpg" alt="Ноутбук в лесу" class="place__image" />
+                <div>
                     <p class="place__paragraph">
                         Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете
                         познакомиться с невидимым чудом здешних мест — горным воздухом.
@@ -132,13 +132,13 @@
                 </div>
             </article>
             <article class="place">
-                <div class="place__cover">
-                    <h2 class="place__title">Зимний Байкал</h2>
-                    <img src="./images/place-winter-baikal.jpg" alt="Прозрачный лёд Байкала" class="place__image" />
-                </div>
-                <div class="place__item">
+                <h2 class="place__title">Зимний Байкал</h2>
+                <div class="place__website">
                     <p class="place__url-heading">url</p>
                     <a href="https://vk.com/baikalmile" target="_blank" class="place__link">https://vk.com/baikalmile</a>
+                </div>
+                <img src="./images/place-winter-baikal.jpg" alt="Прозрачный лёд Байкала" class="place__image" />
+                <div>
                     <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
                     <p class="place__paragraph">
                         Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду.
@@ -147,13 +147,13 @@
                 </div>
             </article>
             <article class="place">
-                <div class="place__cover">
-                    <h2 class="place__title">Карелия</h2>
-                    <img src="./images/place-karelia.jpg" alt="Леса Карелии" class="place__image" />
-                </div>
-                <div class="place__item">
+                <h2 class="place__title">Карелия</h2>
+                <div class="place__website">
                     <p class="place__url-heading">url</p>
                     <a href="http://vodlozero.ru" target="_blank" class="place__link">http://vodlozero.ru/</a>
+                </div>
+                <img src="./images/place-karelia.jpg" alt="Леса Карелии" class="place__image" />
+                <div>
                     <p class="place__paragraph">
                         Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых
                         болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не
